//package com.sincetimes.redwar.game.comnunicate.protocol;
message RceObtainVisitHelps
{
	optional string targetAccountId = 1;
	optional string planetId = 2;
}