//package com.sincetimes.redwar.game.comnunicate.protocol;


message RseUnitDamaged
{
    optional int32 ret = 1;
}

